# h2m2t

./: README.md  pyproject.toml
h2m2t/: __init__.py  h2m.py  h2m_test.py  h2t.py  h2t_test.py  html.py  m2h.py  m2h_test.py  m2t.py  m2t_test.py  markdown.py  table.py  table_test.py  text.py
tests/html_to_markdown/: citilink.md  dns.md  drive2.md  drive2_html.parser.md  gazeta.md  gazeta_html.parser.md  habr.md  habr_html.parser.md  iv1.html  iv1.md  iv1_html.parser.md  iv1_lxml.md  iv2.md  iv3.md  iv4.md  iv5.md  kinopoisk.md  kinopoisk_html.parser.md  kommersant.md  kommersant_html.parser.md  kp.md  kp_html.parser.md  lenta.md  livejournal1.md  livejournal2.md  livejournal2_html.parser.md  livejournal3.md  livejournal3_html.parser.md  mk.md  mk_html.parser.md  mk_lxml.md  ozon.md  ozon_html.parser.md  ozon_lxml.md  rbc.md  rbc_html.parser.md  ria.md  sport.md  sport_html.parser.md  vc.md  (+5 more)
tests/html_to_text/: article3.txt  article4.txt  break.txt  citilink.txt  dns.txt  drive2.txt  drive2_html.parser.txt  empty.html  gazeta.txt  gazeta_html.parser.txt  habr.txt  iv1.txt  iv1_html.parser.txt  iv2.txt  iv3.txt  iv4.txt  iv5.txt  kinopoisk.txt  kinopoisk_html.parser.txt  kommersant.txt  kommersant_html.parser.txt  kp.txt  lenta.txt  livejournal1.txt  livejournal2.txt  livejournal2_html.parser.txt  livejournal3.txt  livejournal3_html.parser.txt  mk.txt  mk_html.parser.txt  mk_lxml.txt  no_space.txt  ozon.txt  ozon_lxml.txt  rbc.txt  ria.txt  sport.txt  vc.txt  vc_html.parser.txt  wb.txt  (+2 more)
tests/markdown_to_html/: citilink.html  dns.html  drive2.html  gazeta.html  iv1.html  (+19 more)
(+44 files in other folders)
